# retia

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.fso-amem/: project.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
docs/: BENCHMARKS.md  TUNING_STORAGE.md
retia-bin/: Cargo.toml  README.md
retia-bin/src/: index.html  repl.rs  security.txt  server.rs
retia-core/: Cargo.toml  README.md
retia-core/benches/: pokec.rs  time_travel.rs  wiki_pagerank.rs
retia-core/src/: lib.rs  swapvec.rs  utils.rs
retia-core/src/data/: aggr.rs  expr.rs  functions.rs  memcmp.rs  program.rs  value.rs
retia-core/src/data/tests/: functions.rs  memcmp.rs  validity.rs
retia-core/src/fixed_rule/: mod.rs
retia-core/src/fixed_rule/algos/: all_pairs_shortest_path.rs  label_propagation.rs  pagerank.rs  random_walk.rs
retia-core/src/fts/cangjie/: tokenizer.rs
retia-core/src/fts/tokenizer/: ngram_tokenizer.rs
retia-core/src/parse/: fts.rs  mod.rs  query.rs
retia-core/src/query/: eval.rs  ra.rs  stored.rs
retia-core/src/runtime/: db.rs  hnsw.rs  minhash_lsh.rs  relation.rs  temp_store.rs  tests.rs  transact.rs
retia-core/src/storage/: mem.rs  mod.rs  newrocks.rs  rocks.rs  sled.rs  sqlite.rs  tikv.rs
retia-core/tests/: air_routes.rs
retia-examples/: Cargo.toml
retia-rocks/: CMakeLists.txt  Cargo.toml  README.md  build.rs
retia-rocks/bridge/: db.cpp  status.cpp  tx.cpp
retia-rocks/src/bridge/: mod.rs
retia-wasm/: Cargo.toml  README.md
retia-wasm/src/: lib.rs
