[package]
name = "retia-bin"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Standalone Retia database (Rust-only fork of cozo-bin)"
authors = ["Ziyang Hu", "Aditya Kresna"]
homepage = "https://flusci.org"
repository = "https://github.com/fluminis-scientiae-oraculum/retia"
documentation = "https://github.com/fluminis-scientiae-oraculum/retia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! # Features

## Enables the `minimal`, `requests` and `graph-algo` features
compact = ["minimal", "requests", "graph-algo"]
## Enables the `storage-sqlite` and `graph-algo` features
mobile = ["storage-sqlite", "graph-algo"]
## Enables the `minimal`, `requests` and `graph-algo` features in single threaded mode
compact-single-threaded = ["minimal", "requests", "graph-algo"]
## Enables the `storage-sqlite` feature
minimal = ["storage-sqlite"]
## Enables the [Sqlite](https://www.sqlite.org/index.html) backend, also allows backup and restore with Sqlite data files.
storage-sqlite = ["retia/storage-sqlite"]
## Enables the [RocksDB](http://rocksdb.org/) backend
storage-rocksdb = ["retia/storage-rocksdb"]
## Enables the graph algorithms
graph-algo = ["retia/graph-algo"]
## Allows the utilities to make web requests to fetch data
requests = ["retia/requests"]
## Uses jemalloc as the global allocator, can make a difference in performance
jemalloc = ["retia/jemalloc"]
## Enables io-uring option for the RocksDB storage
io-uring = ["retia/io-uring"]
## Enables the [Sled](https://github.com/spacejam/sled) backend
storage-sled = ["retia/storage-sled"]
## Enables the [TiKV](https://tikv.org/) client backend
storage-tikv = ["retia/storage-tikv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retia = { version = "0.1.0", path = "../retia-core", default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.10"
serde_derive = "1.0.199"
serde = { version = "1.0.199" }
chrono = "0.4.38"
serde_json = "1.0.116"
prettytable = "0.10.0"
rustyline = "18"
minreq = { version = "3.0.0-rc.1", features = ["https-rustls"] }
miette = { version = "7", features = ["fancy"] }
ctrlc = "3.4.4"
axum = "0.8"
axum-macros = "0.5"
itertools = "0.14"
tokio = { version = "1.37.0", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3.30"
crossbeam = "0.8.4"
eventsource-client = "0.17"
tower-http = { version = "0.6", features = ["full"] }
rayon = "1"
