[package]
name = "retia-wasm"
version = "0.1.1"
edition = "2021"
description = "Retia database for WASM (Rust-only fork of cozo-lib-wasm)"
authors = ["Ziyang Hu", "Aditya Kresna"]
license = "MPL-2.0"
homepage = "https://flusci.org"
repository = "https://github.com/fluminis-scientiae-oraculum/retia"
documentation = "https://github.com/fluminis-scientiae-oraculum/retia"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
retia = { version = "0.1.1", path = "../retia-core", default-features = false, features = ["wasm"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# wee_alloc was removed in this fork because the upstream crate is unmaintained
# (RUSTSEC-2022-0054). Use the default wasm allocator instead.

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

#[profile.release]
## Tell `rustc` to optimize for small code size.
#opt-level = "s"

[lints]
workspace = true
